==> ThanhHung2000/MC_MCNEX/stm32f103c8t6_hung/Core/Src/wizchip_conf.c <==
#include <stddef.h>
#include "main.h"
#include "wizchip_conf.h"

void 	wizchip_cs_select(void)
{
	HAL_GPIO_WritePin(GPIOA, GPIO_PIN_8, 0);
}

void 	wizchip_cs_deselect(void)
{
	HAL_GPIO_WritePin(GPIOA, GPIO_PIN_8, 1);
}
