==> qhandley/warp-core/libs/ioLibrary_Driver/Ethernet/wizchip_conf.c <==
#include <stddef.h>
#include <avr/io.h>
#include "wizchip_select.h"
#include "wizchip_conf.h"

void 	wizchip_cs_select(void)
{
    PORTB &= ~(1 << PB2); //pull SS low
}

void 	wizchip_cs_deselect(void)
{
    PORTB |= (1 << PB2); //pull SS high 
}
